--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 
     <div class="navbar">
         <a href="contact.html">Contact</a>
-        <a href="home.html">Home</a>
+        <a href="index.html">Home</a>
     </div>
 
     <div class="content">
