--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
 
 <head>
     <title>Contact - Sujit Renny</title>
+    <link rel="icon" type="image/png" href="images/favicon.png">
     <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
@@ -18,7 +21,7 @@
         <div class="center">
         <h1>Contact Me</h1>
         <p><a href="mailto:sujitrenny.dev@gmail.com">Send email</a></p>
-        <p><a href="https://www.linkedin.com/in/sujit-renny-andrews-7784701b3">Linkedin</a></p>
+        <p><a href="https://www.linkedin.com/in/sujit-renny-andrews-7784701b3" target="_blank">Linkedin</a></p>
 
     </div>
     </div>  
