--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
 
 <head>
     <title>Home - Sujit Renny</title>
+    <link rel="icon" type="image/png" href="images/favicon.png">
     <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
@@ -17,7 +20,7 @@
     <div class="content">
         <div class="center">
         <h1>About</h1>
-        <p>I am Sujit Renny Andrews, a 3rd year undergraduate from <a href="https://saintgits.org/">Saintgits College of Engineering</a>, Kottayam, Kerala. A budding Developer and a Tech Enthusiast, who is keen to learn new things</p>
+        <p>I am Sujit Renny Andrews, a 3rd year undergraduate from <a href="https://saintgits.org/" target="_blank">Saintgits College of Engineering</a>, Kottayam, Kerala. A budding Developer and a Tech Enthusiast, who is keen to learn new things</p>
         <p style="color: yellow;"> :‑)</p>
     </div>
     </div>
