--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
 
     <div class="content">
         <div class="center">
-        <h1>About</h1>
-        <p>I am Sujit Renny Andrews, a 3rd year undergraduate from <a href="https://saintgits.org/" target="_blank">Saintgits College of Engineering</a>, Kottayam, Kerala. A budding Developer and a Tech Enthusiast, who is keen to learn new things</p>
-        <p style="color: yellow;"> :‑)</p>
-    </div>
+            <h1>About</h1>
+            <p>I am Sujit Renny Andrews, a 3rd year undergraduate from <a href="https://saintgits.org/"
+                    target="_blank">Saintgits College of Engineering</a>, Kottayam, Kerala. A budding Developer and a
+                Tech Enthusiast, who is keen to learn new things</p>
+            <p style="color: yellow;"> :‑)</p>
+        </div>
     </div>
 
 </body>
